# happy-cli

./: .gitignore  README.md  pyproject.toml
analysis/: run_exome_validation_dragen.sh
data/: README.md
data/ConfidentRegions/: README.md
data/PlatinumGenomesIllumina/: README.md
docs/: Guide_to_run_benchmarking.md
src/happy_cli/: __init__.py  cli.py
